--- a/modules/game/index.html
+++ b/modules/game/index.html
@@ -5,11 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Vite App</title>
+    <title>Soft Games demo</title>
     <style>
         @keyframes spin {
             from { transform: rotate(0deg); }
             to { transform: rotate(360deg); }
+        }
+
+        #stats {
+            position: absolute;
+            top: -20px;
+            left: -30px;
+            z-index: 1000;
+            margin: 0px;
+            padding: 0;
+            transform: scale(0.7);
         }
     </style>
   </head>
